# patched-font-transformer

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.sh
.devcontainer/cpu/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
notebook/: dataloader.ipynb  torchfont.ipynb
patched_font_transformer/: __init__.py
patched_font_transformer/lightning/data_modules/: __init__.py  font_pair.py  multi_font.py
patched_font_transformer/lightning/modules/: __init__.py  classifier.py  translator.py
patched_font_transformer/models/: __init__.py  classifier.py  translator.py
patched_font_transformer/modules/: collate_fn.py  embedding.py  mask.py
patched_font_transformer/scripts/classification/: style.py  weight.py
patched_font_transformer/scripts/classification/style/: patch_size_1.py  patch_size_16.py  patch_size_2.py  patch_size_4.py  patch_size_8.py  style.py
patched_font_transformer/scripts/classification/weight/: patch_size_1.py  patch_size_16.py  patch_size_2.py  patch_size_4.py  patch_size_8.py  weight.py
patched_font_transformer/scripts/translation/: translation.py
patched_font_transformer/torchfont/datasets/: font_pair.py  multi_font.py  single_font.py
patched_font_transformer/torchfont/io/: __init__.py  font.py
patched_font_transformer/torchfont/transforms/: __init__.py  functional.py  transforms.py
patched_font_transformer/torchfont/utils/: visualizer.py
